fix: align boot auth and common utilities with refactored entities
- Update AuthController in aeisp-boot for new login log field structure
- Update CustomUserDetailsService for compatibility with updated user entities
- Extend CommonConstants with new status and deleted constants
- Fix JwtUtilTest to properly initialize secret via reflection before init()

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>